//file:noinspection GroovyAssignabilityCheck
//file:noinspection GroovyUnusedAssignment
//file:noinspection ForeignDelegate
plugins {
    id 'maven-publish'
    id 'fabric-loom' version '1.13.3'
    id 'babric-loom-extension' version '1.13.3'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
	//accessWidenerPath = file("src/main/resources/template.accesswidener")
}

repositories {
    // Used for Babric Loom Extensions
    maven {
        name = 'Babric'
        url = 'https://maven.glass-launcher.net/babric'
    }

    // Used for many dependencies
    maven {
        name = 'Glass Releases'
        url = 'https://maven.glass-launcher.net/releases'
    }

    // Used for Snapshots
    maven {
        name = 'Glass Snapshots'
        url = 'https://maven.glass-launcher.net/snapshots'
    }

    // Used for a StationAPI dependency.
    maven {
        name = 'Froge'
        url 'https://maven.minecraftforge.net/'
    }

    // Used for projects that do not have a maven repository, but do have a GitHub repository with working build scripts.
    maven {
        name = 'Jitpack'
        url = 'https://jitpack.io'
    }

    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }


    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.glasslauncher:biny:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation "org.slf4j:slf4j-api:1.8.0-beta4"
    implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.17.2"
    implementation "me.carleslc:Simple-Yaml:1.8.4"

    modImplementation ("net.modificationstation:StationAPI:${project.stapi_version}") {
        exclude group: "babric", module: "fabric-loader"
    }

    modImplementation("maven.modrinth:modmenu-babric:${project.modmenu_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:bh-creative:${project.bhcreative_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:retrocommands:${project.retrocommands_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:aether-stapi:${project.aether_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:accessory-api:${project.accessoryapi_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:unitweaks:${project.unitweaks_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:glass-config-api:${project.glassconfigapi_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:glass-networking:${project.glassnetworking_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:translated-legacy:${project.translatedlegacy_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:skylands-portal:${project.skylands_portal_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:betterf3-stationapi:${project.betterf3_version}-fabric,b1.7.3") {
        transitive false
    }

    modImplementation("maven.modrinth:smoothbeta:${project.smoothbeta_version}-fabric,b1.7.3") {
        transitive false
    }

}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}

// Maven Publishing
publishing {
	repositories {
		mavenLocal()

		// Glass Maven
		if(project.hasProperty("calmilamsy_secret_publishing_cave_username")){
			maven {
				url = "https://maven.glass-launcher.net/releases"
				credentials {
					username "${project.calmilamsy_secret_publishing_cave_username}"
					password "${project.calmilamsy_secret_publishing_cave_password}"
				}
			}
		}
	}

	publications {
		mavenJava(MavenPublication) {
			artifactId = project.archivesBaseName
			from components.java
		}
	}
}
